test/org/midica/testfiles/failing/soundfont-file-no-args.midica
INCLUDE inc/instruments.midica

SOUNDFONT

0 c /4
